--- a/templates/result.html
+++ b/templates/result.html
@@ -62,7 +62,7 @@
         <h1>Result</h1>
         <div class="result-box">
             <p>Text: {{ text }}</p>
-            <p>Sentiment: {{ sentiment }}</p>
+            <p>Generated Sentence: {{ sentiment }}</p>
         </div>
         <form action="/" method="get">
             <input type="submit" class="btn-back" value="Go Back">
